011-todo-list/src/App/Components/TodoList/TodoList.css
.todo-list {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

.todo-list .is-empty {
  text-align: center;
}

.todo-list table {
  padding: 1rem;
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 10px;
}

.todo-list table caption {
  font-size: 1.5rem;
  text-align: left;
  padding: 8px;
}

/* widths do not need to add to 100% */
.todo-list table col.status {
  width: 5%;
}

.todo-list table col.title {
  width: 60%;
}

.todo-list table col.priority {
  width: 15%;
}

.todo-list table col.delete {
  width: 5%;
}

.todo-list table th,
.todo-list table td {
  padding: 5px;
}

.todo-list table thead tr {
  text-align: left;
}

.todo-list table tbody {
  background-color: rgba(255, 255, 255, 0.03);
}

.todo-list table .todo-date,
.todo-list table .todo-delete,
.todo-list table .todo-status {
  text-align: center;
}

.todo-list table .todo-priority button {
  padding: 0 7px;
  border-radius: 3px;
}

.todo-list table input[type="datetime-local"],
.todo-list table input[type="text"] {
  appearance: none;
}

.todo-list table .todo-priority select,
.todo-list table input[type="datetime-local"],
.todo-list table input[type="text"] {
  font: inherit;
  background-color: transparent;
  color: inherit;
  border: none;
  width: 100%;
}

.todo-list table .todo-priority select option {
  color: black;
}

.todo-list table input[type="text"]:focus {
  outline: none;
}

.todo-list table tr:hover,
.todo-list table tr:has(input[type="text"]:focus) {
  background-color: rgba(255, 255, 255, 0.05);
}

.todo-list table .icon {
  filter: invert(100%);
  height: 1rem;
}

.todo-list table .todo-delete:hover {
  cursor: pointer;
}

@media (prefers-color-scheme: light) {
  .todo-list table {
    background-color: white;
    box-shadow:
      0 1px 2px rgba(0, 0, 0, 0.1),
      0 1px 5px rgba(0, 0, 0, 0.1);
  }

  .todo-list table tbody {
    background-color: rgba(0, 0, 0, 0.03);
  }

  .todo-list table tr:hover,
  .todo-list table tr:has(input[type="text"]:focus) {
    background-color: rgba(0, 0, 0, 0.05);
  }

  .todo-list table .icon {
    filter: invert(0);
  }
}

